# ai-driven-genetic-disorder-detection

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  custom_types.py  docker-compose.yml  env.example  json_convert.py  main.py  migrate_add_chat_type.py  nginx.conf  pyproject.toml  requirements.txt  simple_vcf_test.py  test_api.py  test_vcf_parsing.py  utils.py
app/: database.py  models.py  schemas.py
app/routers/: auth.py  auth_utils.py  chat.py  message.py
frontend/: README.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  theme-context.tsx
frontend/app/analyze/blood-report/: page.tsx
frontend/app/analyze/blood-report/history/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: FileUpload.tsx  Sidebar.tsx
frontend/components/ui/: Button.tsx  Input.tsx
frontend/types/: api.ts
src/ai_driven_genetic_disorder_detection/: __init__.py
tools/: google_search_tool.py  tavily_search_tool.py
